    [project]
    name = "rl_blockchain"
    version = "0.1.0"
    description = "Add your description here"
    readme = "README.md"
    requires-python = ">=3.13"
    dependencies = [
        "distrax>=0.1.5",
        "flax>=0.10.6",
        "jax>=0.6.0",
        "jraph>=0.0.6.dev0",
        "matplotlib>=3.10.3",
        "networkx>=3.4.2",
        "optax>=0.2.4",
        "tqdm>=4.67.1",
        "wandb>=0.19.11",
]

    [dependency-groups]
    dev = [
        "notebook>=7.4.2",
        "snakeviz>=2.2.2",
        "tensorboard>=2.19.0",
        "tensorboard-plugin-profile>=2.19.6",
    ]
